setup/kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    namespace: default
    name: ingress
    annotations:

spec:
    ingressClassName: nginx
    rules:
        - host: wlosiara.pl
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: wlosiara-client-server
                            port:
                                number: 80
